microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimeter/exception.prop
Bad property: keyvalue in ../components/exceptions/bad/badDelimeter/application.prop.properties:1.
Property must contain ':' or '=' as delimiter.